Removed additional publisher. Merged everything into main publisher.

--- a/src/main/resources/org/jenkinsci/plugins/DependencyCheck/DependencyCheckPublisher/config.properties
+++ b/src/main/resources/org/jenkinsci/plugins/DependencyCheck/DependencyCheckPublisher/config.properties
@@ -18,3 +18,6 @@ description.pattern=<a href="{0}">Fileset 'includes'</a> \
                  <a href="ws/">the workspace root</a>. If no value is set, then the default \
                  '**/dependency-check-report.xml' is used. Be sure not to include any non-report \
                  files into this pattern.
+                 
+description.threadFixAppId=<a href="{0}">ThreadFix Application ID</a> is the ID given to the application \
+				 by this Jenkins job inside of ThreadFix.
